# robosuite-lab

./: .gitignore  README.md  pgsql.md  pyproject.toml  requirements.txt
configs/algo/: bc.yaml  ppo.yaml  sac.yaml
configs/controller/: notes.md  panda_osc_pose_fast.json  panda_osc_pose_precise.json
configs/runtime/: local.yaml  server_headless.yaml
docs/: controller_tuning.md  headless_server.md  troubleshooting_win.md
requirements/: base.txt  dev.txt  server.txt  train.txt
scripts/: eval_sb3_render.py  export_video.py  gymwrapper_env_comparison.py  gymwrapper_flattening_analysis.py  gymwrapper_summary.py  hrl_research_framework.py  inspect_obs_layout.py  list_envs_and_robots.py  obs_visualization.py  render_from_policy.py  sanity_rollout.py  server_smoke_test.py  teleop_keyboard.py  train_offpolicy.py  train_sb3_ppo.py  visualize_obs.py
src/rslab/: __init__.py  cli.py
src/rslab/algo/: __init__.py
src/rslab/algo/bc/: model.py  train.py
src/rslab/algo/common/: eval.py  logger.py  replay_buffer.py
src/rslab/algo/rl/: ppo.py  sac.py
src/rslab/controllers/: load_controller.py  presets.py
src/rslab/datasets/: hdf5_io.py
src/rslab/envs/: make_env.py  make_sb3_env.py
src/rslab/envs/custom_tasks/: __init__.py  my_task_template.py
src/rslab/envs/wrappers/: action_clip.py  flatten_obs.py  frame_stack.py  time_limit.py
src/rslab/runners/: collect_demos.py  eval.py  rollout.py  train.py
src/rslab/utils/: paths.py  seeding.py  timing.py  video.py
tests/: test_determinism.py  test_env_make.py  test_flatten_obs.py
